recursion.lessons.recursion.tree.Tree.scala.error
Tree:8: error: type mismatch;
 found   : Unit
 required: java.awt.Color
	setColor(current(steps));
                        ^